fix bug where player could go out of bounds

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ Feel free to use it if you like. */
     -ms-animation-name: spin;
     -ms-animation-duration: 500ms;
     -ms-animation-iteration-count: infinite;
-    -ms-animation-timing-function: linear;*/
+    -ms-animation-timing-function: linear;
     -o-transition: rotate(3600deg);
 }
 
